Added the slides from the 'Git Best Practices' presentation.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Rangle U Slide Decks</h1>
     <ul>
       <li><a href="deck.html?which=typescript-101">TypeScript 101</a></li>
+      <li><a href="deck.html?which=git-best-practices">Git Best Practices</a></li>
     </ul>
   </body>
 </html>
