added slides for the react native navigation workshop

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
       <li><a href="deck.html?which=typescript-101">TypeScript 101</a></li>
       <li><a href="deck.html?which=git-best-practices">Git Best Practices</a></li>
+      <li><a href="deck.html?which=react-native-navigation">React Native Navigation</a></li>
     </ul>
   </body>
 </html>
